Fix market manipulator rule