@@ -9,6 +9,7 @@ import businessObjects.db.clickhouse.crmTbDepositTable.CrmTbDepositObject;
 import businessObjects.db.clickhouse.crmTbUserTable.CrmTbUserObject;
 import businessObjects.db.clickhouse.lnSessionParsed.LnSessionParsedObject;
 import businessObjects.db.clickhouse.mtMt5DealsCoerced.Mt5DealsCoercedObject;
+import businessObjects.db.clickhouse.mtMt5Positions.MtMt5PositionsObject;
 import businessObjects.kafka.mtEvents.CloseTradeMtEvent;
 import generator.annotations.RuleTestData;
 import helpers.data.ClientHelper;
@@ -16,7 +17,6 @@ import helpers.data.enums.DateTimeFormat;
 import helpers.data.rules.RuleDataHelper;
 import net.datafaker.Faker;
 
-import java.sql.SQLException;
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.Map;
@@ -31,6 +31,7 @@ import static businessObjects.db.clickhouse.mtMt5DealsCoerced.Mt5DealsCoercedFac
 import static businessObjects.db.clickhouse.mtMt5Positions.MtMt5PositionsObjectFactory.generatePositionByOrder;
 import static helpers.data.ClientFactory.getRandomVantageClientAllFields;
 import static helpers.data.enums.DateTimeFormat.DATE_AND_TIME;
+import static helpers.data.rules.RuleDataHelper.deleteRuleData;
 import static helpers.data.rules.RuleDataHelper.setupRuleData;
 import static utils.Utils.*;
 
@@ -105,28 +106,9 @@ public class MarketManipulationRuleDataFactory {
 
     private static RuleDataHelper getMarketManipulationRuleExit2v1Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit2v1Client);
-        // TODO add low toxicity data
-        data.mt5DealsCoercedObjects.get(0).profit = 3000.0;
-        data.mt5DealsCoercedObjects.get(0).profitUsd = 3000.0;
+        data.mt5DealsCoercedObjects.get(0).profit = 2750D;
+        data.mt5DealsCoercedObjects.get(0).profitUsd = 2750D;
 
-        Mt5DealsCoercedObject consecutiveTrade1 = generateTradeByClient(data.clientHelper);
-        Mt5DealsCoercedObject consecutiveTrade2 = generateTradeByClient(data.clientHelper);
-        Mt5DealsCoercedObject consecutiveTrade3 = generateTradeByClient(data.clientHelper);
-        Mt5DealsCoercedObject consecutiveTrade4 = generateTradeByClient(data.clientHelper);
-        Mt5DealsCoercedObject consecutiveTrade5 = generateTradeByClient(data.clientHelper);
-
-        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
-        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
-        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
-        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
-        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
-
-        data.mt5DealsCoercedObjects.add(consecutiveTrade1);
-        data.mt5DealsCoercedObjects.add(consecutiveTrade2);
-        data.mt5DealsCoercedObjects.add(consecutiveTrade3);
-        data.mt5DealsCoercedObjects.add(consecutiveTrade4);
-        data.mt5DealsCoercedObjects.add(consecutiveTrade5);
-        // TODO add low toxicity data
         ClientHelper client = marketManipulationExit2v1Client;
         data.mt5DealsCoercedObjects.getFirst().time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 60);
         data.mt5DealsCoercedObjects.getFirst().timeUtc = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 60);
@@ -139,7 +121,6 @@ public class MarketManipulationRuleDataFactory {
 
     private static RuleDataHelper getMarketManipulationRuleExit2v2Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit2v2Client);
-        // TODO add low toxicity data
         data.aggrCreditEquityRate.currentEquity = 2501.0;
         ClientHelper client = marketManipulationExit2v1Client;
         data.mt5DealsCoercedObjects.getFirst().time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 60);
@@ -160,10 +141,10 @@ public class MarketManipulationRuleDataFactory {
     private static RuleDataHelper getMarketManipulationRuleExit3Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit3Client);
         data.aggrCreditEquityRate.currentEquity = 2501.0;
-        // TODO add low toxicity data
         data.mt5DealsCoercedObjects.get(0).profit = 3000.0;
         data.mt5DealsCoercedObjects.get(0).profitUsd = 3000.0;
 
+        // add toxicity data
         Mt5DealsCoercedObject consecutiveTrade1 = generateTradeByClient(data.clientHelper);
         Mt5DealsCoercedObject consecutiveTrade2 = generateTradeByClient(data.clientHelper);
         Mt5DealsCoercedObject consecutiveTrade3 = generateTradeByClient(data.clientHelper);
@@ -181,7 +162,8 @@ public class MarketManipulationRuleDataFactory {
         data.mt5DealsCoercedObjects.add(consecutiveTrade3);
         data.mt5DealsCoercedObjects.add(consecutiveTrade4);
         data.mt5DealsCoercedObjects.add(consecutiveTrade5);
-        // TODO add low toxicity data
+        // add toxicity data
+
         data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2501.0, 123.45));
         Mt5DealsCoercedObject trade1Open;
         Mt5DealsCoercedObject trade1Close;
@@ -205,13 +187,41 @@ public class MarketManipulationRuleDataFactory {
 
     private static RuleDataHelper getMarketManipulationRuleExit4v1Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit4v1Client);
-        Mt5DealsCoercedObject dealWithProfit = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject dealWithProfit = generateTradeByClient(marketManipulationExit4v1Client);
         dealWithProfit.profit = 2501.0;
         dealWithProfit.profitUsd = 2501.0;
         dealWithProfit.symbol = "EURUSD";
         data.mt5DealsCoercedObjects.add(dealWithProfit);
         data.aggrCreditEquityRate.currentEquity = 2501.0;
-        // TODO add low toxicity data
+        data.mt5DealsCoercedObjects.get(0).profit = 3000.0;
+        data.mt5DealsCoercedObjects.get(0).profitUsd = 3000.0;
+
+        // add toxicity data
+        Mt5DealsCoercedObject consecutiveTrade1 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade2 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade3 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade4 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade5 = generateTradeByClient(data.clientHelper);
+
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+
+        consecutiveTrade1.notionalValueUsd = 1_000_000d;
+        consecutiveTrade2.notionalValueUsd = 1_000_000d;
+
+        MtMt5PositionsObject positionsObject1 = generatePositionByOrder(consecutiveTrade1);
+        positionsObject1.notionalValueUsd = 1_000_000d;
+
+        data.mt5DealsCoercedObjects.add(consecutiveTrade1);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade2);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade3);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade4);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade5);
+        data.mtMt5PositionsObjects.add(positionsObject1);
+        // add toxicity data
         data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2499.0, 123.45));
         ConnectionAndConnectedUser connectionAndConnectedUser = getConnectionAndConnectedUser(data.clientHelper);
         connectionAndConnectedUser.connectionTableEntry.degreeConnection = "Same Person";
@@ -266,72 +276,205 @@ public class MarketManipulationRuleDataFactory {
 
     private static RuleDataHelper getMarketManipulationRuleExit4v2Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit4v2Client);
+        Mt5DealsCoercedObject dealWithProfit = generateTradeByClient(data.clientHelper);
+        dealWithProfit.profit = 2501.0;
+        dealWithProfit.profitUsd = 2501.0;
+        dealWithProfit.symbol = "EURUSD";
+        data.mt5DealsCoercedObjects.add(dealWithProfit);
         data.aggrCreditEquityRate.currentEquity = 2501.0;
-        // TODO add low toxicity data
-        data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2501.0, 123.45));
-        Mt5DealsCoercedObject trade = generateTradeByClient(data.clientHelper);
-        //trade.deal = data.closeTradeEvent.tradeId;
+        data.mt5DealsCoercedObjects.get(0).profit = 3000.0;
+        data.mt5DealsCoercedObjects.get(0).profitUsd = 3000.0;
+
+        // add toxicity data
+        Mt5DealsCoercedObject consecutiveTrade1 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade2 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade3 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade4 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade5 = generateTradeByClient(data.clientHelper);
+
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+
+        consecutiveTrade1.notionalValueUsd = 1_000_000d;
+        consecutiveTrade2.notionalValueUsd = 1_000_000d;
+
+        MtMt5PositionsObject positionsObject1 = generatePositionByOrder(consecutiveTrade1);
+        positionsObject1.notionalValueUsd = 1_000_000d;
+
+        data.mt5DealsCoercedObjects.add(consecutiveTrade1);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade2);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade3);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade4);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade5);
+        data.mtMt5PositionsObjects.add(positionsObject1);
+        // add toxicity data
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2499.0, 123.45));
+
+        ConnectionAndConnectedUser connectionAndConnectedUser = getConnectionAndConnectedUser(data.clientHelper);
+        connectionAndConnectedUser.connectionTableEntry.degreeConnection = "Not Same Person";
+        data.connectedUsers.add(connectionAndConnectedUser.crmTbUserObject);
+        data.connections.add(connectionAndConnectedUser.connectionTableEntry);
+        data.crmTbAccountObjectConnections.add(connectionAndConnectedUser.account);
+
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(connectionAndConnectedUser.clientHelper.getTradingAccount(), connectionAndConnectedUser.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2501.0, 123.45));
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "GBPJPY", 123.45, 2000.0, 123.45));
+        Mt5DealsCoercedObject trade = data.mt5DealsCoercedObjects.getFirst();
         trade.timeUtc = trade.timeUtc.substring(0, 11) + "23" + trade.timeUtc.substring(13);
-        trade.symbol = "JPYUSD";
         data.mt5DealsCoercedObjects.add(trade);
+
         LnSessionParsedObject lexisNexisObject = generateLexisNexisDataByClient(data.clientHelper);
         lexisNexisObject.brand = data.clientHelper.getBrand();
         lexisNexisObject.eventType = "account_creation";
         lexisNexisObject.email = data.clientHelper.getEmail();
         lexisNexisObject.riskRating = "low";
+        lexisNexisObject.trueIpGeo = "HK1";
+        lexisNexisObject.trueIpIsp = "1234";
         data.lnSessionParsedObjectRegistration = lexisNexisObject;
+
+        Mt5DealsCoercedObject firstTrade = generateTradeByClient(data.clientHelper);
+        firstTrade.timeUtc = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 1, 0, 0, 0);
+        data.mt5DealsCoercedObjects.add(firstTrade);
+
+        data.crmTbUserObject.poiCompleteTs = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 2, 0, 0, 0, 0);
+
         CrmTbDepositObject deposit = generateDepositByClient(data.clientHelper);
         deposit.amountUsd = 9999.0;
-        deposit.paymentChannel = "123";
+        deposit.paymentChannel = "crypto";
         data.crmTbDepositObjects.add(deposit);
-        ConnectionAndConnectedUser connectionAndConnectedUser = getConnectionAndConnectedUser(data.clientHelper);
-        connectionAndConnectedUser.connectionTableEntry.degreeConnection = "Same Person";
-        data.connectedUsers.add(connectionAndConnectedUser.crmTbUserObject);
-        data.connections.add(connectionAndConnectedUser.connectionTableEntry);
-        data.crmTbAccountObjectConnections.add(connectionAndConnectedUser.account);
-        Mt5DealsCoercedObject firstTrade = generateTradeByClient(data.clientHelper);
-        firstTrade.timeUtc = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 10, 0, 0, 0);
-        data.mt5DealsCoercedObjects.add(firstTrade);
+
+        data.closeTradeEvent.symbol = "EURUSD1";
+
+        LnSessionParsedObject lexisNexisObjectLogin = generateLexisNexisDataByClient(data.clientHelper);
+        lexisNexisObjectLogin.eventType = "login";
+        lexisNexisObjectLogin.trueIp = new Faker().internet().ipV4Address();
+        data.lnSessionParsedObjectLogin = lexisNexisObjectLogin;
+
+        data.aggrCreditEquityRate.sumCreditOrder = 499.0;
+
+        CrmTbDepositObject deposit2 = generateDepositByClient(data.clientHelper);
+        deposit2.amountUsd = 10_000.0;
+        deposit2.paymentChannel = "crypto";
+        data.crmTbDepositObjects.add(deposit2);
+
+        CrmTbDepositObject deposit3 = generateDepositByClient(data.clientHelper);
+        deposit3.amountUsd = 10_001.0;
+        deposit3.paymentChannel = "crypto";
+        data.crmTbDepositObjects.add(deposit3);
         return data;
     }
 
     private static RuleDataHelper getMarketManipulationRuleExit4v3Data() {
         RuleDataHelper data = getMarketManipulatorRuleData(marketManipulationExit4v3Client);
+        Mt5DealsCoercedObject dealWithProfit = generateTradeByClient(data.clientHelper);
+        dealWithProfit.profit = 2501.0;
+        dealWithProfit.profitUsd = 2501.0;
+        dealWithProfit.symbol = "EURUSD";
+        data.mt5DealsCoercedObjects.add(dealWithProfit);
         data.aggrCreditEquityRate.currentEquity = 2501.0;
-        // TODO add high toxicity data
-        CrmTbDepositObject deposit = generateDepositByClient(data.clientHelper);
-        deposit.amountUsd = 1.0;
-        deposit.paymentChannel = "123";
-        data.crmTbDepositObjects.add(deposit);
-        data.mt5DealsCoercedObjects.getFirst().symbol = "123GHD";
+        data.mt5DealsCoercedObjects.get(0).profit = 3000.0;
+        data.mt5DealsCoercedObjects.get(0).profitUsd = 3000.0;
+
+        // add toxicity data
+        Mt5DealsCoercedObject consecutiveTrade1 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade2 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade3 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade4 = generateTradeByClient(data.clientHelper);
+        Mt5DealsCoercedObject consecutiveTrade5 = generateTradeByClient(data.clientHelper);
+
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+        consecutiveTrade1.time = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 0, 1);
+
+        consecutiveTrade1.notionalValueUsd = 1_000_000d;
+        consecutiveTrade2.notionalValueUsd = 1_000_000d;
+
+        MtMt5PositionsObject positionsObject1 = generatePositionByOrder(consecutiveTrade1);
+        positionsObject1.notionalValueUsd = 1_000_000d;
+
+        data.mt5DealsCoercedObjects.add(consecutiveTrade1);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade2);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade3);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade4);
+        data.mt5DealsCoercedObjects.add(consecutiveTrade5);
+        data.mtMt5PositionsObjects.add(positionsObject1);
+        // add toxicity data
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2499.0, 123.45));
+
+        ConnectionAndConnectedUser connectionAndConnectedUser = getConnectionAndConnectedUser(data.clientHelper);
+        connectionAndConnectedUser.connectionTableEntry.degreeConnection = "Not Same Person";
+        data.connectedUsers.add(connectionAndConnectedUser.crmTbUserObject);
+        data.connections.add(connectionAndConnectedUser.connectionTableEntry);
+        data.crmTbAccountObjectConnections.add(connectionAndConnectedUser.account);
+
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(connectionAndConnectedUser.clientHelper.getTradingAccount(), connectionAndConnectedUser.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "USDEUR", 123.45, 2501.0, 123.45));
+        data.floatingTrades.add(new AggrFloatingTradesGroupBy(data.clientHelper.getTradingAccount(), data.clientHelper.getServerId(), getCurrentTimestampMinusOffsetFormatted(DateTimeFormat.DATE_AND_TIME, 0, 0, 0, 0, 20, 0), 0, 0, "GBPJPY", 123.45, 2000.0, 123.45));
+
+        Mt5DealsCoercedObject trade = data.mt5DealsCoercedObjects.getFirst();
+        trade.timeUtc = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 0, 10, 0);
+        data.mt5DealsCoercedObjects.add(trade);
+
         LnSessionParsedObject lexisNexisObject = generateLexisNexisDataByClient(data.clientHelper);
         lexisNexisObject.brand = data.clientHelper.getBrand();
         lexisNexisObject.eventType = "account_creation";
         lexisNexisObject.email = data.clientHelper.getEmail();
         lexisNexisObject.riskRating = "low";
-        lexisNexisObject.trueIpIsp = "KZ";
+        lexisNexisObject.trueIpGeo = "HK1";
+        lexisNexisObject.trueIpIsp = "1234";
         data.lnSessionParsedObjectRegistration = lexisNexisObject;
-        data.closeTradeEvent.symbol = "JPYUSD+";
+
+        Mt5DealsCoercedObject firstTrade = generateTradeByClient(data.clientHelper);
+        firstTrade.timeUtc = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 1, 0, 0, 0);
+        data.mt5DealsCoercedObjects.add(firstTrade);
+
+        data.crmTbUserObject.poiCompleteTs = getCurrentTimestampMinusOffsetFormatted(DATE_AND_TIME, 0, 0, 0, 1, 0, 0);
+
+        CrmTbDepositObject deposit = generateDepositByClient(data.clientHelper);
+        deposit.amountUsd = 999.0;
+        deposit.paymentChannel = "crypto";
+        data.crmTbDepositObjects.add(deposit);
+
+        data.closeTradeEvent.symbol = "EURUSD1";
+
+        LnSessionParsedObject lexisNexisObjectLogin = generateLexisNexisDataByClient(data.clientHelper);
+        lexisNexisObjectLogin.eventType = "login";
+        lexisNexisObjectLogin.trueIp = new Faker().internet().ipV4Address();
+        data.lnSessionParsedObjectLogin = lexisNexisObjectLogin;
+
+        data.aggrCreditEquityRate.sumCreditOrder = 499.0;
+
+        CrmTbDepositObject deposit2 = generateDepositByClient(data.clientHelper);
+        deposit2.amountUsd = 1000.0;
+        deposit2.paymentChannel = "crypto1";
+        data.crmTbDepositObjects.add(deposit2);
+
+        CrmTbDepositObject deposit3 = generateDepositByClient(data.clientHelper);
+        deposit3.amountUsd = 1000.0;
+        deposit3.paymentChannel = "crypto1";
+        data.crmTbDepositObjects.add(deposit3);
         return data;
     }
 
-    public static Map<String, RuleDataHelper> setupMarketManipulationRuleData()
-            throws ReflectiveOperationException, SQLException {
+    public static Map<String, RuleDataHelper> setupMarketManipulationRuleData() {
         Map<String, RuleDataHelper> map = new HashMap<>();
         // Put all the db data for setup in a map
-//        map.put("1", getMarketManipulationRuleExit1Data());
-//        map.put("2v1", getMarketManipulationRuleExit2v1Data());
-//        map.put("2v2", getMarketManipulationRuleExit2v2Data());
+        map.put("1", getMarketManipulationRuleExit1Data());
+        map.put("2v1", getMarketManipulationRuleExit2v1Data());
+        map.put("2v2", getMarketManipulationRuleExit2v2Data());
         map.put("3", getMarketManipulationRuleExit3Data());
-//        map.put("4v1", getMarketManipulationRuleExit4v1Data());
-//        map.put("4v2", getMarketManipulationRuleExit4v2Data());
-//        map.put("4v3", getMarketManipulationRuleExit4v3Data());
-//        map.put("5", getMarketManipulationRuleExit5Data());
+        map.put("4v1", getMarketManipulationRuleExit4v1Data());
+        map.put("4v2", getMarketManipulationRuleExit4v2Data());
+        map.put("4v3", getMarketManipulationRuleExit4v3Data());
+        map.put("5", getMarketManipulationRuleExit5Data());
         setupRuleData(map);
         return map;
     }
 
     public static void deleteMarketManipulationRuleData(Map<String, RuleDataHelper> map) throws Exception {
-        //deleteRuleData(map);
+        deleteRuleData(map);
     }
 }
